--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "xii.doc.tar.xz": 2d129db664752eb160c74c694f4150f2542c73a6
-  "xii.tar.xz": c15ae8fe8cac4c73eac09f308ff44dc4f3bec844
+  xii.doc.tar.xz: 1851d813107ab07c3ea99830f090ca55a84fc9fa
+  xii.tar.xz: a6686a0eeafe56a2d47a67596cd6ed7029a36daa
